--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       <img src="photo.jpg" alt="fundo" width="600px" height="400px"/> 
       <div class="content">
         <h1 class="título">Curso de Introdução Desenvolvimento Web</h1>
-        <h2 class="subtítulo">Bem vindo, Henrique</h2>
+        <h2 class="subtítulo" id="result"></h2>
       </div>
       <input placeholder="Seu nome" name="name" id="name"/>
-      <button class="primary">Entrar</button>
-      <button class="secundary">Sair</button>
+      <button class="primary" onclick="getValue()">Entrar</button>
+      <button class="secundary" onclick="removeValue()">Sair</button>
     </section>
+    <script src="index.js"></script>
   </body> 
 </html>
